--- a/index.html
+++ b/index.html
@@ -8,16 +8,16 @@
     <link ref="stylesheet" href="styles.css">
 </head>
 <body>
-    <div>
-    <div class="box"></div>
-    <div class="box"></div>
-    <div class="box"></div>
-    <div class="box"></div>
-    <div class="box"></div>
-    <div class="box"></div>
-    <div class="box"></div>
-    <div class="box"></div>
-    <div class="box"></div>
+    <div class="board"> <h1>Tic Tac Toe</h1>
+    <div class="top left"></div>
+    <div class="top middle"></div>
+    <div class="top right"></div>
+    <div class="middle left"></div>
+    <div class="middle middle"></div>
+    <div class="middle right"></div>
+    <div class="bottom left"></div>
+    <div class="bottom middle"></div>
+    <div class="bottom right"></div>
     </div>
     
 </body>
