--- a/index.html
+++ b/index.html
@@ -9,15 +9,21 @@
 </head>
 <body>
     <div class="board"> <h1>Tic Tac Toe</h1>
-    <div class="top left"></div>
-    <div class="top middle"></div>
-    <div class="top right"></div>
-    <div class="middle left"></div>
-    <div class="middle middle"></div>
-    <div class="middle right"></div>
-    <div class="bottom left"></div>
-    <div class="bottom middle"></div>
-    <div class="bottom right"></div>
+        <div class="row">
+            <div class="top left"></div>
+            <div class="top middle"></div>
+            <div class="top right"></div>
+        </div>
+        <div class="row">
+            <div class="center left"></div>
+            <div class="center middle"></div>
+            <div class="center right"></div>
+        </div>
+        <div class="row">
+            <div class="bottom left"></div>
+            <div class="bottom middle"></div>
+            <div class="bottom right"></div>
+        </div>
     </div>
     
 </body>
