--- a/index.html
+++ b/index.html
@@ -5,26 +5,32 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tic Tac Toe</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@500&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <div class="board"> <h1>Tic Tac Toe</h1>
+    <div class="board"> <h1>🥦 Tic Tac Toe 🥦</h1>
+        <h2 id="winnerDraw"></h2>
+        <button onClick="window.location.reload()" class="reset">Restart</button>
         <div class="row">
-            <div class="top left"></div>
-            <div class="top middle"></div>
-            <div class="top right"></div>
+            <div class="top left cell" id="0"></div>
+            <div class="top middle cell" id ="1"></div>
+            <div class="top right cell" id="2"></div>
         </div>
         <div class="row">
-            <div class="center left"></div>
-            <div class="center middle"></div>
-            <div class="center right"></div>
+            <div class="center left cell" id="3"></div>
+            <div class="center middle cell" id="4"></div>
+            <div class="center right cell" id="5"></div>
         </div>
         <div class="row">
-            <div class="bottom left"></div>
-            <div class="bottom middle"></div>
-            <div class="bottom right"></div>
+            <div class="bottom left cell" id="6"></div>
+            <div class="bottom middle cell" id="7"></div>
+            <div class="bottom right cell" id="8"></div>
         </div>
     </div>
     
+    <script src="app.js"></script>
 </body>
 </html>
